--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -15,8 +15,8 @@
     <input type="text" th:field="*{password}" id="password/">
     <p/>
     <p>
-        <label for="progLanguage/">Enter programming language: </label>
-        <input type="text" th:field="*{progLanguage}" id="progLanguage/">
+        <label for="email/">Email: </label>
+        <input type="text" th:field="*{email}" id="email/">
     <p>
     <br/>
     <label>Roles:
