--- a/src/main/resources/templates/admin/new.html
+++ b/src/main/resources/templates/admin/new.html
@@ -17,8 +17,8 @@
 <!--    <label for="age/">Enter age: </label>-->
 <!--    <input type="text" th:field="*{age}" id="age/">-->
 <!--    <p>-->
-        <label for="progLanguage/">Enter programming language: </label>
-        <input type="text" th:field="*{progLanguage}" id="progLanguage/">
+        <label for="email/">Enter email: </label>
+        <input type="text" th:field="*{email}" id="email/">
     <br/>
     <br/>
     <label>Roles:
