--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,7 +7,7 @@
 <body>
 <p th:text="${user.getId()}">VALUE</p>
 <p th:text="${user.getUsername()}">VALUE</p>
-<p th:text="${user.getProgLanguage()}">VALUE</p>
+<p th:text="${user.getEmail}">VALUE</p>
 
 
 </form>
